# fastchat-backend

./: .dockerignore  .env.docker  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  justfile  nginx.conf  pyproject.toml
app/: main.py  seed.py
app/api/: errors.py  middlewares.py  routes.py
app/core/: config.py  database.py  dependencies.py  logger.py  publisher.py  redis.py  security.py  websocket_manager.py
app/core/base/: errors.py  repository.py  schemas.py
app/domains/auth/: dependencies.py  errors.py  router.py  schemas.py  security.py  service.py  session_store.py
app/domains/chats/: broker.py  dependencies.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py  websocket_manager.py
app/domains/messages/: dependencies.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/shared/: utils.py
app/domains/users/: dependencies.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py
app/migrations/: env.py
app/migrations/versions/: 2026_04_19_1631-4a5dfec2d55d_create_users_table.py  2026_04_26_1538-6d6352ea606c_create_chats_table.py  2026_04_26_1546-fcd111a981fe_create_messages_table.py  2026_04_26_1603-85c6a556397c_add_creator_to_chats.py  2026_05_13_1652-671612441df7_add_chat_users_indexes.py  2026_05_14_2133-4404420b81d0_add_invited_chat_user.py  2026_05_17_1149-79defcccfeaf_rename_author_to_sender_messages.py  2026_05_24_1418-30b207b44e82_create_pagination_messages_index.py  2026_07_08_1553-83baeb9dda89_add_updated_at_and_status_to_messages.py
tests/: conftest.py
tests/chats/: conftest.py  test_add_member.py  test_create_chat.py  test_delete_chat.py  test_get_chats.py  test_get_messages.py  test_invite_link.py  test_leave_chat.py  test_remove_member.py  test_update_chat.py
tests/messages/: test_delete_message.py  test_send_message.py  test_update_message.py
tests/users/: conftest.py  test_auth.py  test_users.py
