[project]
name = "fastapi-uv-template"
version = "0.1.0"
description = "Шаблон стартового проекта FastAPI с авторизацией"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
pythonpath = ["app"]


[tool.ruff]
required-version = ">=0.15.10"
line-length = 88
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
    "logs",
    ".idea",
]

[tool.ruff.lint]
select = [
    "FAST", # FastAPI (FAST)
    "YTT", # flake8-2020 (YTT)
    "ANN", # flake8-annotations (ANN)
    # "ASYNC", # flake8-async (ASYNC)
    "S", # flake8-bandit (S)
    "BLE", # flake8-blind-except (BLE)
    # "FBT", # flake8-boolean-trap (FBT)
    "B", # flake8-bugbear (B)
    "COM", # flake8-commas (COM)
    "C4", # flake8-comprehensions (C4)
    "DTZ", # flake8-datetimez (DTZ)
    "T10", # flake8-debugger (T10)
    "EM", # flake8-errmsg (EM)
    "ISC", # flake8-implicit-str-concat (ISC)
    "ICN", # flake8-import-conventions (ICN)
    "LOG", # flake8-logging (LOG)
    "G", # flake8-logging-format (G)
    "INP", # flake8-no-pep420 (INP)
    "PIE", # flake8-pie (PIE)
    "T20", # flake8-print (T20)
    "PYI", # flake8-pyi (PYI)
    # "PT", # flake8-pytest-style (PT)
    "Q", # flake8-quotes (Q)
    "RSE", # flake8-raise (RSE)
    "RET", # flake8-return (RET)
    "SLF", # flake8-self (SLF)
    "SIM", # flake8-simplify (SIM)
    "SLOT", # flake8-slots (SLOT)
    "TC", # flake8-type-checking (TC)
    "ARG", # flake8-unused-arguments (ARG)
    "PTH", # flake8-use-pathlib (PTH)
    "FLY", # flynt (FLY)
    "I", # isort (I)
    "C90", # mccabe (C90)
    "N", # pep8-naming (N)
    "PERF", # Perflint (PERF)
    "E", # pycodestyle Error (E)
    "W", # pycodestyle Warning (W)
    # "DOC", # pydoclint (DOC)
    # "D", # pydocstyle (D)
    "F", # Pyflakes (F)
    "PGH", # pygrep-hooks (PGH)
    "PLC", # Pylint Convention (PLC)
    "PLE", # Pylint Error (PLE)
    "PLR", # Pylint Refactor (PLR)
    "PLW", # Pylint Warning (PLW)
    "UP", # pyupgrade (UP)
    "FURB", # refurb (FURB)
    "RUF", # Ruff-specific rules (RUF)
    "TRY", # tryceratops (TRY)
]
ignore = [
    "S101", # S101	assert	Use of assert detected
    "RUF001", # ambiguous-unicode-character-string (RUF001)
    "RUF002", # ambiguous-unicode-character-docstring (RUF002)
    "RUF003", # ambiguous-unicode-character-comment (RUF003)
    "TC006", # runtime-cast-value (TC006)
    "B904", # raise-without-from-inside-except (B904)
    "DTZ005", # call-datetime-now-without-tzinfo (DTZ005)
    "DTZ011", # call-date-today (DTZ011)
    "COM812",  # Конфликтует с форматтером
    "COM818",  # Тоже может конфликтовать (trailing commas in calls)
    "TC001",
    "TC002", # Требует TYPE_CHECKING для импортов не runtime типов
    "TC003", # Требует TYPE_CHECKING для импортов не runtime типов
    "S105", # Не дает захардкодить переменные конфига
    "PGH004", # Не дает использовать noqa без указания на конкретное правило
    "INP001", # Требует везде создать __init__.py где надо и не надо
    "ARG001", # Мешает объявлять фикстуры в тестах
]

# Включаем безопасную альтернативу
extend-select = [
    "COM819",  # Только неверные висячие запятые
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = [
    "PLC0414", # useless-import-alias (PLC0414)
]
"stuff.py" = [
    "T20", # flake8-print (T20)
]
"**/test_*.py" = [
    "S311", # S311 Standard pseudo-random generators are not suitable for cryptographic purposes
]

"**/conftest.py" = [
    "S311", # S311 Standard pseudo-random generators are not suitable for cryptographic purposes
]
